--- a/index.html
+++ b/index.html
@@ -1,282 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FA-Tshirt</title>
-    <style>
-        /* General Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        /* Header Section */
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 30px;
-            background-color: #ff3030; /* Candy Apple Red */
-            color: white;
-        }
-        header .logo h1 {
-            font-family: 'Snap ITC', cursive;
-            font-size: 36px;
-            font-weight: bold;
-            color: #fff;
-            margin-right: 15px;
-            text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4); /* 3D effect */
-        }
-        header .search-bar input {
-            padding: 12px;
-            width: 450px;
-            border-radius: 20px;
-            border: 1px solid #ccc;
-            font-size: 16px;
-        }
-        header .search-bar input::placeholder {
-            color: #888;
-        }
-        header .header-right a {
-            text-decoration: none;
-            color: white;
-            margin-left: 15px;
-            font-weight: bold;
-            font-size: 18px;
-            padding: 8px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        header .header-right a:hover {
-            background-color: #b32222; /* Darker red for hover */
-        }
-        /* Main Navigation Menu */
-        .main-nav {
-            background-color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .main-nav ul {
-            list-style-type: none;
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-        }
-        .main-nav ul li a {
-            color: black;
-            text-decoration: none;
-            font-size: 18px;
-            text-transform: uppercase;
-        }
-        .main-nav ul li a:hover {
-            color: #ff3030; /* Candy Apple Red */
-        }
-        /* Banner Section */
-        .banner {
-            background-color: #ff3030; /* Candy Apple Red */
-            color: white;
-            padding: 60px 20px;
-            text-align: center;
-        }
-        .banner h2 {
-            font-size: 40px;
-            margin-bottom: 10px;
-        }
-        .banner p {
-            font-size: 20px;
-            margin-bottom: 20px;
-        }
-        .banner button {
-            padding: 12px 20px;
-            font-size: 16px;
-            background-color: #ff3030; /* Candy Apple Red */
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
-        .banner button:hover {
-            background-color: #b32222; /* Darker red for hover */
-            transform: scale(1.1);
-        }
-        /* Featured Products Section */
-        .featured-products {
-            padding: 50px 20px;
-            text-align: center;
-            background-color: #ff3030; /* Candy Apple Red */
-        }
-        .featured-products h2 {
-            font-size: 32px;
-            margin-bottom: 30px;
-            color: white;
-        }
-        .product-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 30px;
-        }
-        .product-item {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        .product-item img {
-            width: 100%;
-            height: 250px;
-            object-fit: cover;
-            border-radius: 8px;
-        }
-        .product-item h3 {
-            font-size: 18px;
-            margin-top: 15px;
-        }
-        .product-item p {
-            font-size: 16px;
-            color: #ff3030; /* Candy Apple Red */
-            margin-top: 10px;
-        }
-        .product-item button {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #ff3030; /* Candy Apple Red */
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
-        .product-item button:hover {
-            background-color: #b32222; /* Darker red for hover */
-            transform: scale(1.1);
-        }
-        /* Footer Section */
-        footer {
-            background-color: #1d1d1d;
-            color: white;
-            padding: 40px 20px;
-        }
-        footer .footer-content {
-            display: flex;
-            justify-content: space-between;
-            gap: 30px;
-        }
-        footer .footer-content .about, footer .footer-content .quick-links {
-            flex: 1;
-        }
-        footer h2 {
-            font-size: 24px;
-            margin-bottom: 15px;
-        }
-        footer p {
-            font-size: 16px;
-            line-height: 1.5;
-        }
-        footer a {
-            color: white;
-            text-decoration: none;
-            margin: 5px 0;
-            display: block;
-            font-size: 14px;
-        }
-        footer a:hover {
-            color: #ff3030; /* Candy Apple Red */
-        }
-        footer .footer-bottom {
-            text-align: center;
-            margin-top: 30px;
-        }
-        footer .footer-bottom p {
-            font-size: 14px;
-            color: #888;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FA-Tshirt | Stylish Affordable Tees</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #fff;
+      color: #000;
+    }
+    header {
+      background-color: red;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    nav {
+      background-color: white;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 2px solid red;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    nav h2 {
+      color: red;
+      margin: 0;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+    }
+    nav ul li {
+      position: relative;
+      color: red;
+      cursor: pointer;
+    }
+    nav ul li:hover ul {
+      display: block;
+    }
+    nav ul li ul {
+      display: none;
+      position: absolute;
+      top: 30px;
+      left: 0;
+      background: white;
+      padding: 10px;
+      border: 1px solid red;
+    }
+    nav ul li ul li {
+      padding: 5px;
+      white-space: nowrap;
+    }
+    .hero {
+      background: url('https://images.unsplash.com/photo-1581579185169-c55f64c47f1a?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;
+      height: 300px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      text-shadow: 2px 2px 5px black;
+      font-size: 2em;
+      text-align: center;
+    }
+    .actions {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 20px 0;
+    }
+    .actions button {
+      background: red;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .products {
+      padding: 30px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      overflow: hidden;
+      text-align: center;
+      transition: 0.3s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+    .card h3 {
+      margin: 10px 0;
+    }
+    .card p {
+      color: red;
+      font-weight: bold;
+    }
+    footer {
+      background: red;
+      color: #fff;
+      text-align: center;
+      padding: 15px;
+      margin-top: 30px;
+    }
+    #cartPage, #loginModal {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: white;
+      padding: 20px;
+      border: 2px solid red;
+      border-radius: 10px;
+      z-index: 9999;
+    }
+    #cartPage h2, #loginModal h2 {
+      color: red;
+    }
+    #overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      z-index: 999;
+    }
+  </style>
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <div class="logo">
-            <h1 style="font-family: 'Snap ITC', cursive; text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);">FA-Tshirt</h1> <!-- 3D effect added -->
-        </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search your products...">
-        </div>
-        <div class="header-right">
-            <a href="#">Login</a>
-            <a href="#">Cart</a>
-        </div>
-    </header>
+  <header>
+    <h1>Welcome to FA-Tshirt</h1>
+    <p>Stylish | Trendy | Affordable</p>
+  </header>
 
-    <!-- Navigation -->
-    <nav class="main-nav">
+  <nav>
+    <h2>FA-TSHIRT</h2>
+    <ul>
+      <li>Home</li>
+      <li>Men
         <ul>
-            <li><a href="#">Men</a></li>
-            <li><a href="#">Women</a></li>
-            <li><a href="#">Kids</a></li>
-            <li><a href="#">Plus Size</a></li>
-            <li><a href="#">Accessories</a></li>
-            <li><a href="#">Latest Collection</a></li>
+          <li>T-Shirts</li>
+          <li>Shirts</li>
         </ul>
-    </nav>
+      </li>
+      <li>Women
+        <ul>
+          <li>Crop Tops</li>
+          <li>Oversized</li>
+        </ul>
+      </li>
+      <li>Kids
+        <ul>
+          <li>Boy's Tees</li>
+          <li>Girl's Tees</li>
+        </ul>
+      </li>
+      <li onclick="openCart()">Cart</li>
+      <li onclick="openLogin()">Login</li>
+    </ul>
+  </nav>
 
-    <!-- Banner -->
-    <div class="banner">
-        <h2>Welcome to FA-Tshirt</h2>
-        <p>Your one-stop shop for trendy t-shirts!</p>
-        <button>Shop Now</button>
+  <div class="hero">
+    <div>Unleash Your Style with FA-Tshirt</div>
+  </div>
+
+  <section class="products">
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1602810317728-7b6f8e3774b1?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
+      <h3>Street Vibe Tee</h3>
+      <p>₹249</p>
     </div>
-
-    <!-- Featured Products -->
-    <div class="featured-products">
-        <h2>Featured Products</h2>
-        <div class="product-grid">
-            <div class="product-item">
-                <img src="https://via.placeholder.com/300" alt="Product 1">
-                <h3>T-Shirt 1</h3>
-                <p>$19.99</p>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product-item">
-                <img src="https://via.placeholder.com/300" alt="Product 2">
-                <h3>T-Shirt 2</h3>
-                <p>$22.99</p>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product-item">
-                <img src="https://via.placeholder.com/300" alt="Product 3">
-                <h3>T-Shirt 3</h3>
-                <p>$18.99</p>
-                <button>Add to Cart</button>
-            </div>
-        </div>
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1618354691373-fbba3fd7f10e?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
+      <h3>Urban Warrior Tee</h3>
+      <p>₹299</p>
     </div>
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1621905251919-4f438f1be170?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
+      <h3>Classic Red</h3>
+      <p>₹199</p>
+    </div>
+  </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <div class="about">
-                <h2>About FA-Tshirt</h2>
-                <p>We provide high-quality, affordable t-shirts for every fashion lover. With stylish and trendy designs, we aim to be India's number one clothing brand!</p>
-            </div>
-            <div class="quick-links">
-                <h2>Quick Links</h2>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms & Conditions</a>
-                <a href="#">Shipping & Returns</a>
-                <a href="#">FAQ</a>
-                <a href="#">Contact Us</a>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>© 2025 FA-Tshirt. All rights reserved. | Designed with ❤️ in India.</p>
-        </div>
-    </footer>
+  <div id="overlay" onclick="closePopup()"></div>
+
+  <div id="cartPage">
+    <h2>Your Cart</h2>
+    <p>No items added yet!</p>
+    <button onclick="closePopup()">Close</button>
+  </div>
+
+  <div id="loginModal">
+    <h2>Login</h2>
+    <input type="text" placeholder="Email" style="padding:10px;margin:5px 0;width:100%"><br>
+    <input type="password" placeholder="Password" style="padding:10px;margin:5px 0;width:100%"><br>
+    <button style="background:red;color:white;padding:10px 20px;margin-top:10px;border:none;cursor:pointer">Login</button>
+    <br><br>
+    <button onclick="closePopup()">Cancel</button>
+  </div>
+
+  <footer>
+    <p>© 2025 FA-Tshirt. All rights reserved.</p>
+  </footer>
+
+  <script>
+    function openCart() {
+      document.getElementById('cartPage').style.display = 'block';
+      document.getElementById('overlay').style.display = 'block';
+    }
+    function openLogin() {
+      document.getElementById('loginModal').style.display = 'block';
+      document.getElementById('overlay').style.display = 'block';
+    }
+    function closePopup() {
+      document.getElementById('cartPage').style.display = 'none';
+      document.getElementById('loginModal').style.display = 'none';
+      document.getElementById('overlay').style.display = 'none';
+    }
+  </script>
 </body>
 </html>
