--- a/index.html
+++ b/index.html
@@ -1,243 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FA-Tshirt | Stylish Affordable Tees</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FA-Tshirt</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: Arial, sans-serif;
       background-color: #fff;
       color: #000;
     }
     header {
-      background-color: red;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      background-color: white;
+      background-color: #d32f2f;
       padding: 10px 20px;
       display: flex;
+      align-items: center;
       justify-content: space-between;
-      align-items: center;
-      border-bottom: 2px solid red;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      flex-wrap: wrap;
     }
-    nav h2 {
-      color: red;
-      margin: 0;
-    }
-    nav ul {
-      list-style: none;
+    .logo {
       display: flex;
-      gap: 20px;
-      margin: 0;
-    }
-    nav ul li {
-      position: relative;
-      color: red;
-      cursor: pointer;
-    }
-    nav ul li:hover ul {
-      display: block;
-    }
-    nav ul li ul {
-      display: none;
-      position: absolute;
-      top: 30px;
-      left: 0;
-      background: white;
-      padding: 10px;
-      border: 1px solid red;
-    }
-    nav ul li ul li {
-      padding: 5px;
-      white-space: nowrap;
-    }
-    .hero {
-      background: url('https://images.unsplash.com/photo-1581579185169-c55f64c47f1a?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;
-      height: 300px;
-      display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
       color: white;
-      text-shadow: 2px 2px 5px black;
-      font-size: 2em;
-      text-align: center;
+      font-weight: bold;
+      font-size: 24px;
     }
-    .actions {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin: 20px 0;
-    }
-    .actions button {
-      background: red;
+    .logo small {
+      font-size: 12px;
       color: white;
+    }
+    .search-bar {
+      flex: 1;
+      max-width: 500px;
+      margin: 0 20px;
+    }
+    .search-bar input {
+      width: 100%;
+      padding: 8px;
       border: none;
-      padding: 10px 20px;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+    .nav-buttons {
+      display: flex;
+      gap: 10px;
+    }
+    .nav-buttons button {
+      background-color: white;
+      color: #d32f2f;
+      border: none;
+      padding: 8px 12px;
       border-radius: 5px;
       cursor: pointer;
       font-weight: bold;
     }
-    .products {
-      padding: 30px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    nav {
+      background-color: #f44336;
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      padding: 10px 0;
+    }
+    nav div {
+      color: white;
+      position: relative;
+    }
+    nav div:hover .dropdown {
+      display: block;
+    }
+    .dropdown {
+      display: none;
+      position: absolute;
+      top: 30px;
+      background-color: white;
+      color: #d32f2f;
+      padding: 10px;
+      border-radius: 5px;
+    }
+    .dropdown a {
+      display: block;
+      margin-bottom: 5px;
+      color: #d32f2f;
+      text-decoration: none;
+    }
+    .product-list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 20px;
       gap: 20px;
     }
-    .card {
-      background: white;
+    .product {
+      border: 1px solid #ccc;
+      padding: 10px;
       border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      overflow: hidden;
+      width: 250px;
       text-align: center;
-      transition: 0.3s;
     }
-    .card:hover {
-      transform: translateY(-5px);
-    }
-    .card img {
+    .product img {
       width: 100%;
-      height: 200px;
-      object-fit: cover;
-    }
-    .card h3 {
-      margin: 10px 0;
-    }
-    .card p {
-      color: red;
-      font-weight: bold;
-    }
-    footer {
-      background: red;
-      color: #fff;
-      text-align: center;
-      padding: 15px;
-      margin-top: 30px;
-    }
-    #cartPage, #loginModal {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      padding: 20px;
-      border: 2px solid red;
       border-radius: 10px;
-      z-index: 9999;
     }
-    #cartPage h2, #loginModal h2 {
-      color: red;
+    .product button {
+      background-color: #d32f2f;
+      color: white;
+      border: none;
+      padding: 8px;
+      border-radius: 5px;
+      cursor: pointer;
     }
-    #overlay {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.4);
-      z-index: 999;
+    @media (max-width: 768px) {
+      .search-bar {
+        order: 3;
+        width: 100%;
+        margin-top: 10px;
+      }
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Welcome to FA-Tshirt</h1>
-    <p>Stylish | Trendy | Affordable</p>
+    <div class="logo">
+      <div>👕</div>
+      <small>FA-Tshirt</small>
+    </div>
+    <div class="search-bar">
+      <input type="text" placeholder="Search for t-shirts..." />
+    </div>
+    <div class="nav-buttons">
+      <button onclick="showLogin()">Login</button>
+      <button onclick="showCart()">Cart</button>
+    </div>
   </header>
-
   <nav>
-    <h2>FA-TSHIRT</h2>
-    <ul>
-      <li>Home</li>
-      <li>Men
-        <ul>
-          <li>T-Shirts</li>
-          <li>Shirts</li>
-        </ul>
-      </li>
-      <li>Women
-        <ul>
-          <li>Crop Tops</li>
-          <li>Oversized</li>
-        </ul>
-      </li>
-      <li>Kids
-        <ul>
-          <li>Boy's Tees</li>
-          <li>Girl's Tees</li>
-        </ul>
-      </li>
-      <li onclick="openCart()">Cart</li>
-      <li onclick="openLogin()">Login</li>
-    </ul>
+    <div>Men
+      <div class="dropdown">
+        <a href="#">T-Shirts</a>
+        <a href="#">Shirts</a>
+      </div>
+    </div>
+    <div>Women
+      <div class="dropdown">
+        <a href="#">Tops</a>
+        <a href="#">Dresses</a>
+      </div>
+    </div>
+    <div>Kids
+      <div class="dropdown">
+        <a href="#">Boys</a>
+        <a href="#">Girls</a>
+      </div>
+    </div>
   </nav>
-
-  <div class="hero">
-    <div>Unleash Your Style with FA-Tshirt</div>
-  </div>
-
-  <section class="products">
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1602810317728-7b6f8e3774b1?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
-      <h3>Street Vibe Tee</h3>
+  <section class="product-list">
+    <div class="product">
+      <img src="https://via.placeholder.com/250x250.png?text=Red+Tshirt" alt="Red Tshirt" />
+      <h3>Red Classic Tee</h3>
       <p>₹249</p>
+      <button>Add to Cart</button>
     </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1618354691373-fbba3fd7f10e?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
-      <h3>Urban Warrior Tee</h3>
+    <div class="product">
+      <img src="https://via.placeholder.com/250x250.png?text=White+Tshirt" alt="White Tshirt" />
+      <h3>White Bold Tee</h3>
       <p>₹299</p>
+      <button>Add to Cart</button>
     </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1621905251919-4f438f1be170?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
-      <h3>Classic Red</h3>
-      <p>₹199</p>
+    <div class="product">
+      <img src="https://via.placeholder.com/250x250.png?text=Printed+Tshirt" alt="Printed Tshirt" />
+      <h3>Printed Streetwear</h3>
+      <p>₹349</p>
+      <button>Add to Cart</button>
     </div>
   </section>
-
-  <div id="overlay" onclick="closePopup()"></div>
-
-  <div id="cartPage">
-    <h2>Your Cart</h2>
-    <p>No items added yet!</p>
-    <button onclick="closePopup()">Close</button>
-  </div>
-
-  <div id="loginModal">
-    <h2>Login</h2>
-    <input type="text" placeholder="Email" style="padding:10px;margin:5px 0;width:100%"><br>
-    <input type="password" placeholder="Password" style="padding:10px;margin:5px 0;width:100%"><br>
-    <button style="background:red;color:white;padding:10px 20px;margin-top:10px;border:none;cursor:pointer">Login</button>
-    <br><br>
-    <button onclick="closePopup()">Cancel</button>
-  </div>
-
-  <footer>
-    <p>© 2025 FA-Tshirt. All rights reserved.</p>
-  </footer>
-
-  <script>
-    function openCart() {
-      document.getElementById('cartPage').style.display = 'block';
-      document.getElementById('overlay').style.display = 'block';
-    }
-    function openLogin() {
-      document.getElementById('loginModal').style.display = 'block';
-      document.getElementById('overlay').style.display = 'block';
-    }
-    function closePopup() {
-      document.getElementById('cartPage').style.display = 'none';
-      document.getElementById('loginModal').style.display = 'none';
-      document.getElementById('overlay').style.display = 'none';
-    }
-  </script>
 </body>
 </html>
