--- a/index.html
+++ b/index.html
@@ -2,111 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>FA-Tshirt</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    @font-face {
-      font-family: 'SnapITC';
-      src: local('Snap ITC'), url('https://fonts.cdnfonts.com/s/22228/SNAP____.TTF') format('truetype');
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background-color: #fff;
-      color: #000;
-    }
-
-    header {
-      background-color: #d90429;
-      padding: 10px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    .logo {
-      font-family: 'SnapITC', sans-serif;
-      font-size: 28px;
-      font-weight: bold;
-      color: white;
-      text-shadow: 2px 2px 0 #000;
-    }
-
-    .search-bar {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      padding: 10px;
-    }
-
-    .search-bar input {
-      width: 60%;
-      padding: 10px;
-      border-radius: 5px;
-      border: none;
-      outline: none;
-      font-size: 16px;
-    }
-
-    .nav-categories {
-      width: 100%;
-      background-color: #fff;
-      display: flex;
-      justify-content: center;
-      padding: 10px 0;
-      gap: 30px;
-    }
-
-    .nav-categories a {
-      color: #d90429;
-      text-decoration: none;
-      font-weight: bold;
-      position: relative;
-    }
-
-    .nav-categories a:hover::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background: #d90429;
-      bottom: -5px;
-      left: 0;
-    }
-
-    .icons {
-      display: flex;
-      gap: 15px;
-    }
-
-    .icons a {
-      color: white;
-      font-size: 20px;
-      text-decoration: none;
-    }
-
-    @media screen and (max-width: 768px) {
-      .search-bar input {
-        width: 90%;
-      }
-      .nav-categories {
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-      }
-    }
-  </style>
 </head>
 <body>
   <header>
     <div class="logo">FA-Tshirt</div>
     <div class="search-bar">
-      <input type="text" placeholder="Search for products..." />
+      <input type="text" placeholder="Search for products...">
     </div>
     <div class="icons">
       <a href="#">❤️</a>
@@ -116,9 +21,27 @@
   </header>
 
   <nav class="nav-categories">
-    <a href="#">Men's</a>
-    <a href="#">Women's</a>
-    <a href="#">Kids's</a>
+    <a href="#">Men</a>
+    <a href="#">Women</a>
+    <a href="#">Kids</a>
   </nav>
+
+  <section class="product-section">
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200" alt="Tshirt">
+      <h3>Cool Black T-shirt</h3>
+      <p>₹299</p>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200" alt="Tshirt">
+      <h3>Trendy Red Tee</h3>
+      <p>₹349</p>
+    </div>
+    <!-- Aur bhi product-card copy karke add kar sakta hai -->
+  </section>
+
+  <footer>
+    <p>&copy; 2025 FA-Tshirt. All rights reserved.</p>
+  </footer>
 </body>
 </html>
