--- a/index.html
+++ b/index.html
@@ -2,16 +2,153 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    @font-face {
+      font-family: 'SnapITC';
+      src: local('Snap ITC'), url('https://fonts.cdnfonts.com/s/22228/SNAP____.TTF') format('truetype');
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      background-color: #fff;
+      color: #000;
+    }
+
+    header {
+      background-color: #d90429;
+      padding: 10px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .logo {
+      font-family: 'SnapITC', sans-serif;
+      font-size: 28px;
+      font-weight: bold;
+      color: white;
+      text-shadow: 2px 2px 0 #000;
+    }
+
+    .search-bar {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      padding: 10px;
+    }
+
+    .search-bar input {
+      width: 60%;
+      padding: 10px;
+      border-radius: 5px;
+      border: none;
+      outline: none;
+      font-size: 16px;
+    }
+
+    .nav-categories {
+      width: 100%;
+      background-color: #fff;
+      display: flex;
+      justify-content: center;
+      padding: 10px 0;
+      gap: 30px;
+    }
+
+    .nav-categories a {
+      color: #d90429;
+      text-decoration: none;
+      font-weight: bold;
+      position: relative;
+    }
+
+    .nav-categories a:hover::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background: #d90429;
+      bottom: -5px;
+      left: 0;
+    }
+
+    .icons {
+      display: flex;
+      gap: 15px;
+    }
+
+    .icons a {
+      color: white;
+      font-size: 20px;
+      text-decoration: none;
+      transition: transform 0.2s ease-in-out;
+    }
+
+    .icons a:hover {
+      transform: scale(1.2);
+    }
+
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 20px;
+      padding: 20px;
+    }
+
+    .product {
+      background: #fff;
+      border: 1px solid #ddd;
+      text-align: center;
+      padding: 10px;
+      border-radius: 10px;
+      transition: 0.3s;
+    }
+
+    .product:hover {
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      transform: scale(1.02);
+    }
+
+    .product img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    footer {
+      background:#d90429;
+      color:white;
+      text-align:center;
+      padding:10px 0;
+      margin-top:20px;
+    }
+
+    @media screen and (max-width: 768px) {
+      .search-bar input {
+        width: 90%;
+      }
+      .nav-categories {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
     <div class="logo">FA-Tshirt</div>
     <div class="search-bar">
-      <input type="text" placeholder="Search for products...">
+      <input type="text" placeholder="Search for products..." />
     </div>
     <div class="icons">
       <a href="#">❤️</a>
@@ -26,22 +163,31 @@
     <a href="#">Kids</a>
   </nav>
 
-  <section class="product-section">
-    <div class="product-card">
-      <img src="https://via.placeholder.com/200" alt="Tshirt">
-      <h3>Cool Black T-shirt</h3>
+  <section class="product-grid">
+    <div class="product">
+      <img src="https://via.placeholder.com/200" alt="Tshirt 1">
+      <h3>Printed Tee</h3>
       <p>₹299</p>
     </div>
-    <div class="product-card">
-      <img src="https://via.placeholder.com/200" alt="Tshirt">
-      <h3>Trendy Red Tee</h3>
+    <div class="product">
+      <img src="https://via.placeholder.com/200" alt="Tshirt 2">
+      <h3>Cool Black Tee</h3>
       <p>₹349</p>
     </div>
-    <!-- Aur bhi product-card copy karke add kar sakta hai -->
+    <div class="product">
+      <img src="https://via.placeholder.com/200" alt="Tshirt 3">
+      <h3>Street Style</h3>
+      <p>₹399</p>
+    </div>
+    <div class="product">
+      <img src="https://via.placeholder.com/200" alt="Tshirt 4">
+      <h3>Classic Fit</h3>
+      <p>₹279</p>
+    </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 FA-Tshirt. All rights reserved.</p>
+    © 2025 FA-Tshirt | All rights reserved.
   </footer>
 </body>
 </html>
